# Big-Data-project-

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
clean_data/: merged_data.parquet  traffic_cleaned.parquet  weather_cleaned.parquet
docs/: notes.md  tasks.md
gold/: factor_analysis_loadings.parquet  factor_analysis_scores.parquet  monte_carlo_simulation_results.parquet
notebook/: Factor_Analysis_merged_data.ipynb  data_cleaning .ipynb  data_genration.ipynb  hdfs.ipynb  merge.ipynb  minio.ipynb  monto carlo.ipynb  traffic_cleaned.ipynb  weather_cleaned.ipynb
raw/: Traffic.csv  Weather.csv
report/: .~lock.Untitled 1.odt#  report.odt
