[project]
name = "big-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hdfs>=2.7.3",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "streamlit>=1.52.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
